<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="370dp"
    android:layout_height="wrap_content"
    android:id="@+id/dialogfon"
    android:orientation="vertical"
    android:background="@drawable/prewiew_background"
    android:layout_gravity="center"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"




    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">
        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/buttonclose"
            android:text="X"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/White"
            android:background="@drawable/button_stroke_black90_press_white"
            android:layout_gravity="end"/>

        <TextView
            android:id="@+id/tvX"
            android:layout_width="182dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/matrix_maind"
            android:textColor="@color/White"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textSize="18sp"
            android:id="@+id/text_description"
            android:text="@string/remember_picture"
            android:layout_weight="60"
            android:fontFamily="casual"
            android:textColor="@color/White"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="5dp"


            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/buttonnext"
            android:background="@drawable/button_stroke_black90_press_white"
            android:text="@string/buttonnext"
            android:textColor="@color/White"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:fontFamily="casual"
            />







    </LinearLayout>

</LinearLayout>