<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_green"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_gravity="center"
            android:gravity="center"

            >

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="19dp">

                <Button
                    android:id="@+id/buttonBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/button_stroke_white_press_blue"
                    android:padding="5dp"
                    android:text="@string/back"
                    android:textAllCaps="false"
                    android:textColor="@color/White"
                    android:textSize="24sp"
                    android:fontFamily="casual"

                    />

                <TextView
                    android:id="@+id/textLevels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/Lesson1Level1"
                    android:textColor="@color/White"
                    android:textSize="24sp"
                    android:fontFamily="casual"


                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="330dp"


                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="7dp"
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/l1l1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_lesson1_level1"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/White"
                    android:fontFamily="casual"



                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"


                >

                <Button
                    android:id="@+id/image_arrow_right"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:background="@drawable/arrow_right"
                    android:layout_margin="17dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/point1"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/style_points" />

                <TextView
                    android:id="@+id/point2"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/style_points" />

                <TextView
                    android:id="@+id/point3"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/style_points" />

                <TextView
                    android:id="@+id/point4"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/style_points" />

                <TextView
                    android:id="@+id/point5"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/style_points" />

                <TextView
                    android:id="@+id/point6"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/style_points" />

                <TextView
                    android:id="@+id/point7"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/style_points" />

                <TextView
                    android:id="@+id/point8"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/style_points" />

                <TextView
                    android:id="@+id/point9"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/style_points" />

                <TextView
                    android:id="@+id/point10"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/style_points" />

                <TextView
                    android:id="@+id/point11"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/style_points" />

                <TextView
                    android:id="@+id/point12"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/style_points" />

                <TextView
                    android:id="@+id/point13"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/style_points" />

                <TextView
                    android:id="@+id/point14"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/style_points" />

                <TextView
                    android:id="@+id/point15"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/style_points" />




            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>